5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1815_2564.log
== TEST (2019-06-08 11:51:48) 
-- CODE:
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0

for i in gols_feitos:
	if(gols_feitos(i)>gols_pegos(cont)):
		vitorias=vitorias+1
	else(gols_feitos(i)==gols_pegos(cont)):
		empates=empates+1
	else(gols_feitos(i)<gols_pegos(cont)):
		derrotas=derrotas+1
	cont=cont+1
print(vitorias)
print(empates)
print(derrotas)
-- ERROR:
File "XXXX", line 12
    else(gols_feitos(i)==gols_pegos(cont)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 11:52:37) 
-- CODE:
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0

for i in gols_feitos:
	if(gols_feitos(i)>gols_pegos(cont)):
		vitorias=vitorias+1
	else(gols_feitos(i)=gols_pegos(cont)):
		empates=empates+1
	else(gols_feitos(i)<gols_pegos(cont)):
		derrotas=derrotas+1
	cont=cont+1
print(vitorias)
print(empates)
print(derrotas)
-- ERROR:
File "XXXX", line 12
    else(gols_feitos(i)=gols_pegos(cont)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 11:53:19) 
-- CODE:
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0

for i in gols_feitos:
	if(gols_feitos(i)>gols_pegos(cont)):
		vitorias=vitorias+1
	else((gols_feitos(i)) == (gols_pegos(cont))):
		empates=empates+1
	else(gols_feitos(i)<gols_pegos(cont)):
		derrotas=derrotas+1
	cont=cont+1
print(vitorias)
print(empates)
print(derrotas)
-- ERROR:
File "XXXX", line 12
    else((gols_feitos(i)) == (gols_pegos(cont))):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 11:54:05) 
-- CODE:
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0

for i in gols_feitos:
	if(gols_feitos(i)>gols_pegos(cont)):
		vitorias=vitorias+1
	else((gols_feitos(i)) == (gols_pegos(cont))):
		empates=empates+1
	else(gols_feitos(i)<gols_pegos(cont)):
		derrotas=derrotas+1
	cont=cont+1
print(vitorias)
print(empates)
print(derrotas)
-- ERROR:
File "XXXX", line 12
    else((gols_feitos(i)) == (gols_pegos(cont))):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 11:54:13) 
-- CODE:
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0

for i in gols_feitos:
	if(gols_feitos(i)>gols_pegos(cont)):
		vitorias=vitorias+1

	else(gols_feitos(i)<gols_pegos(cont)):
		derrotas=derrotas+1
	cont=cont+1
print(vitorias)
print(empates)
print(derrotas)
-- ERROR:
File "XXXX", line 13
    else(gols_feitos(i)<gols_pegos(cont)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 11:54:49) 
-- CODE:
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0

for i in gols_feitos:
	if(gols_feitos(i)>gols_pegos(cont)):
		vitorias=vitorias+1
	elif((gols_feitos(i)) == (gols_pegos(cont))):
		empates=empates+1
	elif(gols_feitos(i)<gols_pegos(cont)):
		derrotas=derrotas+1
	cont=cont+1
print(vitorias)
print(empates)
print(derrotas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    gols_feitos=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 11:55:21) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0

for i in gols_feitos:
	if(gols_feitos(i)>gols_pegos(cont)):
		vitorias=vitorias+1
	elif((gols_feitos(i)) == (gols_pegos(cont))):
		empates=empates+1
	elif(gols_feitos(i)<gols_pegos(cont)):
		derrotas=derrotas+1
	cont=cont+1
print(vitorias)
print(empates)
print(derrotas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 11:55:46) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0

for i in gols_feitos:
	if(gols_feitos(i)>gols_pegos(cont)):
		vitorias=vitorias+1
	elif((gols_feitos(i)) == (gols_pegos(cont))):
		empates=empates+1
	elif(gols_feitos(i)<gols_pegos(cont)):
		derrotas=derrotas+1
	cont=cont+1
print(vitorias)
print(empates)
print(derrotas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 11:57:36) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0

for i in gols_feitos:
	if(i>gols_pegos(cont)):
		vitorias=vitorias+1
	elif((gols_feitos(i)) == (gols_pegos(cont))):
		empates=empates+1
	elif(gols_feitos(i)<gols_pegos(cont)):
		derrotas=derrotas+1
	cont=cont+1
print(vitorias)
print(empates)
print(derrotas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 11:58:15) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif((gols_feitos(i)) == (gols_pegos(cont))):
		empates=empates+1
	elif(gols_feitos(i)<gols_pegos(cont)):
		derrotas=derrotas+1
	cont=cont+1
print(vitorias)
print(empates)
print(derrotas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:00:34) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
print(vitorias)
print(empates)
print(derrotas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:00:47) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
print(vitorias)
print(empates)
print(derrotas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 12:01:03) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
print(vitorias)
print(empates)
print(derrotas)
-- EXECUTION TIME:
0.971218
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
7
3
2
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
0
0
9
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
12
1
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:04:04) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(size(gols_feitos), dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
print(v_aux)
print(empates)
print(derrotas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:08:44) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(size(gols_feitos), dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
v_aux2=(vitorias,empates,derrotas)	
print(v_aux2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 12:09:02) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(size(gols_feitos), dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
v_aux2=(vitorias,empates,derrotas)	
print(v_aux2)

-- EXECUTION TIME:
1.13365
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
(7, 3, 2)
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
(0, 0, 9)
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
(12, 1, 0)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:09:58) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(size(gols_feitos), dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
v_aux2=array(vitorias,empates,derrotas)	
print(v_aux2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:38:16) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(size(gols_feitos), dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
v_aux2=array(vitorias,empates,derrotas)	
print(v_aux2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:38:41) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(size(gols_feitos), dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
v_aux2=array[vitorias,empates,derrotas]	
print(v_aux2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:49:03) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(size(gols_feitos), dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	elif(i == gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	elif(i<gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	cont=cont+1	
print(v_aux2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:49:19) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(size(gols_feitos), dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	elif(i == gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	elif(i<gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	cont=cont+1	
print(v_aux)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 12:49:37) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(size(gols_feitos), dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	elif(i == gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	elif(i<gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	cont=cont+1	
print(v_aux)

-- EXECUTION TIME:
1.14327
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[1 1 1 1 1 1 1 1 1]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:49:47) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(size(gols_feitos), dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	elif(i == gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	elif(i<gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	cont=cont+1	
print(v_aux)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 12:53:19) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(3, dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	elif(i == gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	elif(i<gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	cont=cont+1	
print(v_aux)

-- EXECUTION TIME:
1.27672
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2564/main.py", line 13, in <module>
    v_aux[cont]=v_aux[cont]+1
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:53:21) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(3, dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	elif(i == gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	elif(i<gols_pegos[cont]):
		v_aux[cont]=v_aux[cont]+1
	cont=cont+1	
print(v_aux)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 12:57:10) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(size(gols_feitos), dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
v_aux[0]=v_aux[0]+vitorias
v_aux[1]=v_aux[1]+empates
v_aux[2]=v_aux[2]+derrotas
print(v_aux2)

-- EXECUTION TIME:
0.839485
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2564/main.py", line 22, in <module>
    print(v_aux2)
NameError: name 'v_aux2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:57:18) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(size(gols_feitos), dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
v_aux[0]=v_aux[0]+vitorias
v_aux[1]=v_aux[1]+empates
v_aux[2]=v_aux[2]+derrotas
print(v_aux2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 12:57:21) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(size(gols_feitos), dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
v_aux[0]=v_aux[0]+vitorias
v_aux[1]=v_aux[1]+empates
v_aux[2]=v_aux[2]+derrotas
print(v_aux2)

-- EXECUTION TIME:
1.04901
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2564/main.py", line 22, in <module>
    print(v_aux2)
NameError: name 'v_aux2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 12:57:42) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(size(gols_feitos), dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
v_aux[0]=v_aux[0]+vitorias
v_aux[1]=v_aux[1]+empates
v_aux[2]=v_aux[2]+derrotas
print(v_aux)

-- EXECUTION TIME:
1.06977
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2 0 0 0 0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0  0  0  0  0  0  0  0  0  0  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:57:47) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(size(gols_feitos), dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
v_aux[0]=v_aux[0]+vitorias
v_aux[1]=v_aux[1]+empates
v_aux[2]=v_aux[2]+derrotas
print(v_aux)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 12:58:29) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(3, dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
v_aux[0]=v_aux[0]+vitorias
v_aux[1]=v_aux[1]+empates
v_aux[2]=v_aux[2]+derrotas
print(v_aux)

-- EXECUTION TIME:
1.12631
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:58:29) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(3, dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
v_aux[0]=v_aux[0]+vitorias
v_aux[1]=v_aux[1]+empates
v_aux[2]=v_aux[2]+derrotas
print(v_aux)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:58:56) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(3, dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
v_aux[0]=v_aux[0]+vitorias
v_aux[1]=v_aux[1]+empates
v_aux[2]=v_aux[2]+derrotas
print(v_aux)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:59:29) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(3, dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		vitorias=vitorias+1
	elif(i == gols_pegos[cont]):
		empates=empates+1
	elif(i<gols_pegos[cont]):
		derrotas=derrotas+1
	cont=cont+1
v_aux[0]=v_aux[0]+vitorias
v_aux[1]=v_aux[1]+empates
v_aux[2]=v_aux[2]+derrotas
print(v_aux)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 13:50:09) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))

vitorias=0
empates=0
derrotas=0
cont=0
v_aux=zeros(3, dtype=int)

for i in gols_feitos:
	if(i>gols_pegos[cont]):
		v_aux[0]=v_aux[0]+1
	elif(i == gols_pegos[cont]):
		v_aux[1]=v_aux[1]+1
	elif(i<gols_pegos[cont]):
		v_aux[2]=v_aux[2]+1
	cont=cont+1

print(v_aux)

-- EXECUTION TIME:
1.18073
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:53:45) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))
cont=0
v_aux=zeros(3, dtype=int)
for i in gols_feitos:
	if(i>gols_pegos[cont]):#acumula valores para vitorias
		v_aux[0]=v_aux[0]+1
	elif(i == gols_pegos[cont]):#acumula valores para empates
		v_aux[1]=v_aux[1]+1
	elif(i<gols_pegos[cont]):#acumula valores para derrotas
		v_aux[2]=v_aux[2]+1
	cont=cont+1
print(v_aux)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 13:53:53) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))
cont=0
v_aux=zeros(3, dtype=int)
for i in gols_feitos:
	if(i>gols_pegos[cont]):#acumula valores para vitorias
		v_aux[0]=v_aux[0]+1
	elif(i == gols_pegos[cont]):#acumula valores para empates
		v_aux[1]=v_aux[1]+1
	elif(i<gols_pegos[cont]):#acumula valores para derrotas
		v_aux[2]=v_aux[2]+
	cont=cont+1
print(v_aux)

-- EXECUTION TIME:
0.645014
-- ERROR:
  File "/home/codebench/codes/1815/2564/main.py", line 12
    v_aux[2]=v_aux[2]+
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:53:59) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))
cont=0
v_aux=zeros(3, dtype=int)
for i in gols_feitos:
	if(i>gols_pegos[cont]):#acumula valores para vitorias
		v_aux[0]=v_aux[0]+1
	elif(i == gols_pegos[cont]):#acumula valores para empates
		v_aux[1]=v_aux[1]+1
	elif(i<gols_pegos[cont]):#acumula valores para derrotas
		v_aux[2]=v_aux[2]+
	cont=cont+1
print(v_aux)

-- ERROR:
File "XXXX", line 12
    v_aux[2]=v_aux[2]+
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:54:07) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))
cont=0
v_aux=zeros(3, dtype=int)
for i in gols_feitos:
	if(i>gols_pegos[cont]):#acumula valores para vitorias
		v_aux[0]=v_aux[0]+1
	elif(i == gols_pegos[cont]):#acumula valores para empates
		v_aux[1]=v_aux[1]+1
	elif(i<gols_pegos[cont]):#acumula valores para derrotas
		v_aux[2]=v_aux[2]+2
	cont=cont+1
print(v_aux)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 13:54:13) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))
cont=0
v_aux=zeros(3, dtype=int)
for i in gols_feitos:
	if(i>gols_pegos[cont]):#acumula valores para vitorias
		v_aux[0]=v_aux[0]+1
	elif(i == gols_pegos[cont]):#acumula valores para empates
		v_aux[1]=v_aux[1]+1
	elif(i<gols_pegos[cont]):#acumula valores para derrotas
		v_aux[2]=v_aux[2]+2
	cont=cont+1
print(v_aux)

-- EXECUTION TIME:
1.11869
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 4]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[ 0  0 18]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 13:54:21) 
-- CODE:
from numpy import *
gols_feitos=array(eval(input("gols feitos: ")))
gols_pegos=array(eval(input("gols pegos: ")))
cont=0
v_aux=zeros(3, dtype=int)
for i in gols_feitos:
	if(i>gols_pegos[cont]):#acumula valores para vitorias
		v_aux[0]=v_aux[0]+1
	elif(i == gols_pegos[cont]):#acumula valores para empates
		v_aux[1]=v_aux[1]+1
	elif(i<gols_pegos[cont]):#acumula valores para derrotas
		v_aux[2]=v_aux[2]+1
	cont=cont+1
print(v_aux)

-- EXECUTION TIME:
0.92796
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
